--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
   <header>
-    <h1>Minha lista de Tarefas</h1>
+    Minha Lista de Tarefas
   </header>
   <main>
-
+    <p id="funcionamento">
+      Clique duas vezes em um item para marcá-lo como completo
+    </p>
   </main>
   <footer>
 
