--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <p id="funcionamento">
       Clique duas vezes em um item para marcá-lo como completo
     </p>
+    <input type="name" name="texto-tarefa" id="texto-tarefa">
+    
   </main>
   <footer>
 
