--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       Clique duas vezes em um item para marcá-lo como completo
     </p>
     <input type="name" name="texto-tarefa" id="texto-tarefa">
-    
+    <ol id="lista-tarefas"></ol>
   </main>
   <footer>
 
