--- a/index.html
+++ b/index.html
@@ -4,21 +4,24 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Ariane Ueti - To Do List Project</title>
 </head>
 <body>
-  <header>
+  <header class="title">
     Minha Lista de Tarefas
   </header>
   <main>
     <p id="funcionamento">
-      Clique duas vezes em um item para marcá-lo como completo
+      <em>Clique duas vezes em um item para marcá-lo como completo</em>
     </p>
     <input type="name" name="texto-tarefa" id="texto-tarefa">
+    <button id="criar-tarefa">Criar Tarefa</button>
     <ol id="lista-tarefas"></ol>
   </main>
   <footer>
 
   </footer>
+  <script src="script.js"></script>
 </body>
 </html>
