--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
       <em>Clique duas vezes em um item para marcá-lo como completo</em>
     </p>
     <input type="name" name="texto-tarefa" id="texto-tarefa">
-    <button id="criar-tarefa">Criar Tarefa</button>
+    <button class="btn" id="criar-tarefa">Criar Tarefa</button>
     <ol id="lista-tarefas"></ol>
+    <button class="btn" id="apaga-tudo">Apagar tudo</button>
   </main>
   <footer>
 
