--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
     <input type="name" name="texto-tarefa" id="texto-tarefa">
     <button class="btn" id="criar-tarefa">Criar Tarefa</button>
     <ol id="lista-tarefas"></ol>
+    <div class="control_panel">
     <button class="btn" id="apaga-tudo">Apagar tudo</button>
+    <button class="btn" id="remover-finalizados">Limpar finalizados</button>
+    
+    </div>
   </main>
   <footer>
 
